--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-#Add stuff to be ignored here. It can ignore folders as : folder/*
-#http://gitready.com/beginner/2009/01/19/ignoring-files.html
+# Add stuff to be ignored here. It can ignore folders as : folder/*
+# http://gitready.com/beginner/2009/01/19/ignoring-files.html
+# https://help.github.com/articles/ignoring-files
 
-#Ignore the user_guide folder, with all its sub-folders and files.
+# Ignore the user_guide folder, with all its sub-folders and files.
+user_guide/
 user_guide/**/*
