Ignore system folder

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 # http://gitready.com/beginner/2009/01/19/ignoring-files.html
 # https://help.github.com/articles/ignoring-files
 
+# Ignore system folder 
+system/
+
 # Ignore the user_guide folder, with all its sub-folders and files.
 user_guide/
 user_guide/**/*
 
 # Ignore .DS_Store (APPLEBAJS!)
 .DS_Store
+
